Changes to BC and behavior in version 5.3
=========================================

INI setting changes
-------------------


Change of behavior
------------------

- Fix EZP-16372: deleting of content lasts very long

  The prototypes of eZSearch::removeObject() and eZSearch::removeObjectById() have changed :

  static function removeObject( $contentObject, $commit = true )
  becomes
  static function removeObject( $contentObject, $commit = null )

  This change is needed to make ezfind.ini[IndexOptions]\DisableDeleteCommits option of eZFind actually work.

- EZP-22641: changed ezmultiupload preview templates source

  ezmultiupload now uses content/view templates instead of node/view templates.
  This makes it able to display unpublished content (approval, async. publishing...)
  As a consequence, overrides of node/view/line_thumbnail.tpl must be changed to
  overrides of content/view/line_thumbnail.tpl.

Removed features
----------------




Removed constants
-----------------



Removed globals
---------------




Deprecated
----------