@@ -1915,7 +1915,6 @@ WHERE user_id = '" . $userID . "' AND
     static protected function userInfoExpiry()
     {
         /* Figure out when the last update was done */
-        eZExpiryHandler::registerShutdownFunction();
         $handler = eZExpiryHandler::instance();
         if ( $handler->hasTimestamp( 'user-info-cache' ) )
         {
@@ -2698,7 +2697,6 @@ WHERE user_id = '" . $userID . "' AND
      */
     static function cleanupCache()
     {
-        eZExpiryHandler::registerShutdownFunction();
         $handler = eZExpiryHandler::instance();
         $handler->setTimestamp( 'user-info-cache', time() );
         $handler->store();
