@@ -590,8 +590,6 @@ class eZContentClassAttribute extends eZPersistentObject
 
     static function cachedInfo()
     {
-        eZExpiryHandler::registerShutdownFunction();
-
         $info = array();
         $db = eZDB::instance();
         $dbName = md5( $db->DB );
@@ -913,7 +911,6 @@ class eZContentClassAttribute extends eZPersistentObject
                                           '',
                                           array( 'clustering' => 'classattridentifiers' ) );
 
-            eZExpiryHandler::registerShutdownFunction();
             $handler = eZExpiryHandler::instance();
             $expiryTime = 0;
             if ( $handler->hasTimestamp( 'class-identifier-cache' ) )
