@@ -308,6 +308,7 @@ class ezpKernelTreeMenu implements ezpKernelHandler
     {
         eZExecution::cleanup();
         eZExecution::setCleanExit();
+        eZExpiryHandler::shutdown();
         if ( $reInitialize )
             $this->isInitialized = false;
     }
