@@ -167,19 +167,11 @@ class eZExpiryHandler
     /**
      * Registers the shutdown function.
      * @see eZExpiryHandler::shutdown()
+     * @deprecated See EZP-22749
      */
     public static function registerShutdownFunction(){
-        if ( !eZExpiryHandler::$isShutdownFunctionRegistered ) {
-            register_shutdown_function( array('eZExpiryHandler', 'shutdown') );
-            eZExpiryHandler::$isShutdownFunctionRegistered = true;
-        }
+        eZDebug::writeStrict( __METHOD__ . " is deprecated. See EZP-22749.", __METHOD__ . " is deprecated" );
     }
-
-    /**
-     * Indicates if thre shutdown function has been registered
-     * @var bool
-     */
-    private static $isShutdownFunctionRegistered = false;
 
     /**
      * Holds the expiry timestamps array
